# SIEGMA

./: .gitignore  Exceptions.py  Pipfile  README.md  development-guide.md  pyproject.toml  requirements.txt  siegma.py
backends/: BackendBase.py  Backends.py  Elastic.py  __init__.py
config/: README.md
config/azure_sentinel/: 3cs-azure-activity_logs.json  README.md  aws-cloudtrail_logs.json  azure-ad_audit_logs.json  suricata_logs.json
config/elastic/: README.md  elastic-siem-eql.json  elastic-siem.json
converters/: ConvertorsBase.py  Elastic.py  __init__.py
docs/: README.md  arguments.md  automatic-upload.md  backend.md  config.md  development-guide.md  output.md  tools.md
helpers/: check_if_compliant.py  mitre_attack.py  utils.py
output/: output.md
rule_file_creator_scripts/: ala_rule.py  es_eql.py  es_qs.py
tools/: Backends.py  DirectoryTools.py  FileTools.py  LogHandler.py  MitreAttack.py  SigmaUtils.py
